--- a/estilo/article_elements.css
+++ b/estilo/article_elements.css
@@ -1,4 +1,44 @@
-article h3 {
-    color: black;
+article /*Especifidad 001*/{
+    border-radius: 1.5em;
+    padding: 2em;
+    margin-bottom: 2em;
+    overflow: hidden;
+    background-color: #f4f7fc;
+    box-shadow: 0 0.6em 1.2em rgba(0, 0, 0, 0.15);
+}
+
+article h2 /*Especifidad 002*/{
+    text-align: center;
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 1em;
+}
+
+article article /*Especifidad 002*/{
+    background-color: #f9f9f9;
+    border-radius: 1em;
+    padding: 1.5em;
+    margin-bottom: 1.5em;
+    box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, 0.1);
+}
+
+article article h3 /*Especifidad 003*/{
+    font-size: 1.2em;
+    color: #444;
+    margin-bottom: 1em;
+}
+
+article article p /*Especifidad 003*/{
+    font-size: 1em;
+    color: #666;
+    margin: 0.5em 0;
+}
+
+h2, h3 /*Especifidad 001*/{
+    font-family: 'Arial', sans-serif;
+}
+
+main /*Especifidad 001*/{
+    padding: 2em;
 }
 
