--- a/estilo/article_elements.css
+++ b/estilo/article_elements.css
@@ -1,40 +1,38 @@
+main /*Especifidad 001*/{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(18em, 1fr));
+    gap: 1.5em;  
+    padding: 1em;  
+}
+main h2 /*Especifidad 002*/{
+    grid-column: 1 / -1;
+    text-align: center;
+}
 article /*Especifidad 001*/{
     border-radius: 1.5em;
     padding: 2em;
+    border: 0.2em solid #014069;
     margin-bottom: 2em;
     overflow: hidden;
-    background-color: #f4f7fc;
+    background-color: #035286;
     box-shadow: 0 0.6em 1.2em rgba(0, 0, 0, 0.15);
 }
 
 article h2 /*Especifidad 002*/{
     text-align: center;
     font-size: 1.5em;
-    color: #333;
+    color: #f4f7fc;
     margin-bottom: 1em;
 }
 
-article article /*Especifidad 002*/{
-    background-color: #f9f9f9;
-    border-radius: 1em;
-    padding: 1.5em;
-    margin-bottom: 1.5em;
-    box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, 0.1);
-}
 
-article article h3 /*Especifidad 003*/{
-    font-size: 1.2em;
-    color: #444;
-    margin-bottom: 1em;
-}
-
-article article p /*Especifidad 003*/{
+article p /*Especifidad 003*/{
     font-size: 1em;
-    color: #666;
+    color: #f4f7fc;
     margin: 0.5em 0;
 }
 
-h2, h3 /*Especifidad 001*/{
+h2 /*Especifidad 001*/{
     font-family: 'Arial', sans-serif;
 }
 
@@ -42,3 +40,13 @@ main /*Especifidad 001*/{
     padding: 2em;
 }
 
+body /*Especifidad 001*/{
+    background-color: #dedcdc;
+
+}
+
+article:hover /*Especifidad 012*/{
+    transform: scale(1.03); 
+    box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.2); 
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
